--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8">//allows special charcters
   <title>Daily History</title>
   <style>
     body {
-      font-family: system-ui, sans-serif;
+      font-family: system-ui, sans-serif;//uses standard font
       background: #f5f5f5;
-      padding: 2rem;
+      padding: 2rem; //distance edge
       text-align: center;
-    }
-    .card {
+    } 
+    .card { //Karte in mitte
       background: white;
       padding: 2rem;
       max-width: 600px;
@@ -26,14 +26,16 @@
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>📜 Heute in der Geschichte</h1>
-    <p id="date"></p>
+  <div class="card"> //bekommt design von oben
+    <h1>📜 This day in History</h1>
+    <p id="date"></p> //Platzhalter für heutige Datum
+    <p id="title"></p>
     <p class="year" id="year"></p>
-    <p id="event"></p>
+    <p id="text"></p>
+    <p>Source: <a id="source" href="#" target="_blank">Read more</a></p>
   </div>
 
-  <script>
+  <script> 
     const date = new Date();
     const month = date.getMonth() + 1;
     const day = date.getDate();
@@ -41,17 +43,31 @@
     document.getElementById("date").textContent =
       date.toLocaleDateString("de-DE", { day: "numeric", month: "long" });
 
-    fetch(`https://byabbe.se/on-this-day/${month}/${day}/events.json`)
-      .then(response => response.json())
-      .then(data => {
-        const event = data.events[0];
-        document.getElementById("year").textContent = event.year;
-        document.getElementById("event").textContent = event.description;
-      })
-      .catch(() => {
-        document.getElementById("event").textContent =
-          "Heute konnte kein historisches Ereignis geladen werden.";
-      });
+    fetch('history.json')
+  .then(response => response.json())
+  .then(data => {
+    const today = new Date();
+    const month = today.getMonth() + 1;
+    const day = today.getDate();
+
+    // Suche Ereignis für heute
+    const event = data.find(e => e.month === month && e.day === day);
+
+    if(event) {
+      document.getElementById("date").textContent =
+        today.toLocaleDateString("en-US", { month: 'long', day: 'numeric' });
+      document.getElementById("title").textContent = event.title;
+      document.getElementById("year").textContent = `Year: ${event.year}`;
+      document.getElementById("text").textContent = event.text;
+      document.getElementById("source").href = event.source;
+    } else {
+      document.getElementById("text").textContent = "No historical event available for today.";
+    }
+  })
+  .catch(() => {
+    document.getElementById("text").textContent = "Error loading historical events.";
+  });
+
   </script>
 </body>
 </html>
