--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">//allows special charcters
+  <meta charset="UTF-8">
   <title>Daily History</title>
   <style>
     body {
@@ -26,9 +26,9 @@
   </style>
 </head>
 <body>
-  <div class="card"> //bekommt design von oben
+  <div class="card"> 
     <h1>📜 This day in History</h1>
-    <p id="date"></p> //Platzhalter für heutige Datum
+    <p id="date"></p> 
     <p id="title"></p>
     <p class="year" id="year"></p>
     <p id="text"></p>
