--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <script> 
-    const date = new Date();
+    const today = new Date();
     const month = today.getMonth() + 1;
     const day = today.getDate();
 
