--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       text-align: center;
     } 
     .card { //Karte in mitte
-      background: white;
+      background: #FFFFFF;
       padding: 2rem;
       max-width: 600px;
       margin: auto;
