--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       color: #555;
     }
   </style>
+  <script data-goatcounter="https://dailyhistory.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
 </head>
 <body>
   <div class="card"> 
