--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 2rem; /* distance edge */
       text-align: center;
     } 
-    .card { //Karte in mitte
+    .card {  /*Karte in mitte*/
       background: #FFFFFF;
       padding: 2rem;
       max-width: 600px;
@@ -57,9 +57,9 @@ if (hour < 3) {
 } else if (hour < 19) {
   greetingE1.textContent = "Bester Zeitpunkt um sich im schwarzen Loch von Wikipedia zu verlaufen, Lernen ist eh überbewertet"; 
 } else if (hour < 23) {
-  greetingE1.textContent = "Hoffe du hattest nen schönen Tag! (Versuche ausnahmeswse mal nett zu sein, hoffe du weißt das zu schätzen haha);
+  greetingEl.textContent = "Hoffe du hattest nen schönen Tag! (Versuche ausnahmeswse mal nett zu sein, hoffe du weißt das zu schätzen haha)";
 } else if (hour < 24) {
-   greetingE1.textContent = " Gute Nacht, hoffe mal du träumst was schönes! (von mir zum Beispiel);
+   greetingEl.textContent = " Gute Nacht, hoffe mal du träumst was schönes! (von mir zum Beispiel)";
 } 
   
 
