--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ if (hour < 3) {
 } else if (hour < 19) {
   greetingE1.textContent = "Bester Zeitpunkt um sich im schwarzen Loch von Wikipedia zu verlaufen, Lernen ist eh überbewertet"; 
 } else if (hour < 23) {
-  greetingEl.textContent = "Hoffe du hattest nen schönen Tag! (Versuche ausnahmeswse mal nett zu sein, hoffe du weißt das zu schätzen haha)";
+  greetingEl.textContent = "Hoffe du hattest nen schönen Tag!";
 } else if (hour < 24) {
    greetingEl.textContent = " Gute Nacht, hoffe mal du träumst was schönes! (von mir zum Beispiel)";
 } 
