--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ if (hour < 3) {
 } else if (hour < 13) {
   greetingEl.textContent = "Hoffe mal du bist nicht eben erst aufgestanden, wäre schon sehr schwach!";
 } else if (hour < 19) {
-  greetingE1.textContent = "Bester Zeitpunkt um sich im schwarzen Loch von Wikipedia zu verlaufen, Lernen ist eh überbewertet"; 
+  greetingEl.textContent = "Bester Zeitpunkt um sich im schwarzen Loch von Wikipedia zu verlaufen, Lernen ist eh überbewertet"; 
 } else if (hour < 23) {
   greetingEl.textContent = "Hoffe du hattest nen schönen Tag!";
 } else if (hour < 24) {
