--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: system-ui, sans-serif; /* uses standard font */
-      background: #b3a288;
+      background: #FFFFFF;
       padding: 2rem; /* distance edge */
       text-align: center;
     } 
